replacing the names

--- a/title.html
+++ b/title.html
@@ -1,9 +1,9 @@
-<title>Jitsi Meet</title>
-<meta property="og:title" content="Jitsi Meet"/>
+<title>Manifest Rwanda Live</title>
+<meta property="og:title" content="Manifest Rwanda Live"/>
 <meta property="og:image" content="images/jitsilogo.png?v=1"/>
-<meta property="og:description" content="Join a WebRTC video conference powered by the Jitsi Videobridge"/>
-<meta description="Join a WebRTC video conference powered by the Jitsi Videobridge"/>
-<meta itemprop="name" content="Jitsi Meet"/>
-<meta itemprop="description" content="Join a WebRTC video conference powered by the Jitsi Videobridge"/>
+<meta property="og:description" content="Join a Manifest Rwanda video meeting platform for everyone."/>
+<meta description="Join a Manifest Rwanda video meeting platform for everyone."/>
+<meta itemprop="name" content="Manifest Rwanda Live"/>
+<meta itemprop="description" content="Join a Manifest Rwanda video meeting platform for everyone."/>
 <meta itemprop="image" content="images/jitsilogo.png?v=1"/>
 <link rel="icon" href="images/favicon.svg?v=1">
