--- a/static/settingsToolbarAdditionalContent.html
+++ b/static/settingsToolbarAdditionalContent.html
@@ -1,1 +1,26 @@
-<template id="settings-toolbar-additional-content-template"></template>
+<template id="settings-toolbar-additional-content-template">
+    <div style="background: linear-gradient(135deg, #1a472a, #2d5a37); color: white; padding: 20px; border-radius: 10px; margin: 10px 0; border: 1px solid #ffd700;">
+        <div style="text-align: center; margin-bottom: 15px;">
+            <h4 style="color: #ffd700; margin: 0 0 10px 0; font-size: 1.2em;">🇷🇼 Manifest Rwanda Live</h4>
+            <p style="margin: 0; font-size: 0.9em; opacity: 0.9;">Connecting Rwanda to the World</p>
+        </div>
+        <div style="display: flex; justify-content: space-around; align-items: center; font-size: 0.8em;">
+            <div style="text-align: center;">
+                <div style="color: #ffd700; font-weight: bold;">🔒</div>
+                <div>Secure</div>
+            </div>
+            <div style="text-align: center;">
+                <div style="color: #ffd700; font-weight: bold;">⚡</div>
+                <div>Fast</div>
+            </div>
+            <div style="text-align: center;">
+                <div style="color: #ffd700; font-weight: bold;">🌍</div>
+                <div>Global</div>
+            </div>
+            <div style="text-align: center;">
+                <div style="color: #ffd700; font-weight: bold;">🚀</div>
+                <div>Innovation</div>
+            </div>
+        </div>
+    </div>
+</template>
