--- a/static/welcomePageAdditionalContent.html
+++ b/static/welcomePageAdditionalContent.html
@@ -1,1 +1,25 @@
-<template id = "welcome-page-additional-content-template"></template>
+<template id = "welcome-page-additional-content-template">
+    <div style="text-align: center; padding: 40px 20px; background: linear-gradient(135deg, #1a472a, #2d5a37); color: white; border-radius: 15px; margin: 20px 0; box-shadow: 0 8px 32px rgba(0,0,0,0.3);">
+        <h2 style="font-size: 2.5em; margin-bottom: 20px; text-shadow: 2px 2px 4px rgba(0,0,0,0.5);">
+            🌍 Welcome to Manifest Rwanda Live
+        </h2>
+        <p style="font-size: 1.2em; line-height: 1.6; margin-bottom: 30px; max-width: 800px; margin-left: auto; margin-right: auto;">
+            Connect, collaborate, and create lasting change with Rwanda's premier live streaming and video conferencing platform. 
+            Join thousands of Rwandans building a brighter future together.
+        </p>
+        <div style="display: flex; justify-content: center; gap: 30px; flex-wrap: wrap; margin-top: 30px;">
+            <div style="background: rgba(255,255,255,0.1); padding: 20px; border-radius: 10px; min-width: 200px;">
+                <h3 style="color: #ffd700; margin-bottom: 10px;">🎯 Our Mission</h3>
+                <p style="font-size: 0.9em;">Empowering Rwanda through technology, connection, and shared vision for progress.</p>
+            </div>
+            <div style="background: rgba(255,255,255,0.1); padding: 20px; border-radius: 10px; min-width: 200px;">
+                <h3 style="color: #ffd700; margin-bottom: 10px;">🤝 Community First</h3>
+                <p style="font-size: 0.9em;">Building bridges across communities, fostering unity and collaborative growth.</p>
+            </div>
+            <div style="background: rgba(255,255,255,0.1); padding: 20px; border-radius: 10px; min-width: 200px;">
+                <h3 style="color: #ffd700; margin-bottom: 10px;">🚀 Innovation Hub</h3>
+                <p style="font-size: 0.9em;">Leading Rwanda's digital transformation with cutting-edge communication solutions.</p>
+            </div>
+        </div>
+    </div>
+</template>
