--- a/static/welcomePageAdditionalCard.html
+++ b/static/welcomePageAdditionalCard.html
@@ -1,1 +1,34 @@
-<template id = "welcome-page-additional-card-template"></template>
+<template id = "welcome-page-additional-card-template">
+    <div style="background: linear-gradient(45deg, #2d5a37, #1a472a); color: white; border-radius: 15px; padding: 30px; margin: 20px 0; box-shadow: 0 10px 40px rgba(0,0,0,0.2); border: 2px solid #ffd700;">
+        <div style="text-align: center;">
+            <h3 style="color: #ffd700; font-size: 1.8em; margin-bottom: 20px; text-shadow: 1px 1px 2px rgba(0,0,0,0.5);">
+                🇷🇼 Powered by Rwandan Innovation
+            </h3>
+            <p style="font-size: 1.1em; line-height: 1.6; margin-bottom: 25px;">
+                Experience seamless communication with enterprise-grade security, powered by local expertise and global standards.
+            </p>
+            <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 20px; margin: 25px 0;">
+                <div style="background: rgba(255,255,255,0.1); padding: 20px; border-radius: 10px; backdrop-filter: blur(10px);">
+                    <div style="font-size: 2em; margin-bottom: 10px;">🔒</div>
+                    <h4 style="color: #ffd700; margin-bottom: 10px;">End-to-End Security</h4>
+                    <p style="font-size: 0.9em;">Military-grade encryption protecting your conversations and data.</p>
+                </div>
+                <div style="background: rgba(255,255,255,0.1); padding: 20px; border-radius: 10px; backdrop-filter: blur(10px);">
+                    <div style="font-size: 2em; margin-bottom: 10px;">⚡</div>
+                    <h4 style="color: #ffd700; margin-bottom: 10px;">Lightning Fast</h4>
+                    <p style="font-size: 0.9em;">Optimized for African internet infrastructure and connectivity.</p>
+                </div>
+                <div style="background: rgba(255,255,255,0.1); padding: 20px; border-radius: 10px; backdrop-filter: blur(10px);">
+                    <div style="font-size: 2em; margin-bottom: 10px;">🌐</div>
+                    <h4 style="color: #ffd700; margin-bottom: 10px;">Global Reach</h4>
+                    <p style="font-size: 0.9em;">Connect with anyone, anywhere in the world, anytime.</p>
+                </div>
+            </div>
+            <div style="margin-top: 30px; padding-top: 20px; border-top: 1px solid rgba(255,215,0,0.3);">
+                <p style="font-style: italic; color: #ffd700; font-size: 1em;">
+                    "Building Rwanda's digital future, one connection at a time"
+                </p>
+            </div>
+        </div>
+    </div>
+</template>
