correcting home page

--- a/body.html
+++ b/body.html
@@ -7,9 +7,9 @@
             <span style="background: #ffd700; color: #1a472a; padding: 2px 8px; border-radius: 12px; font-size: 0.8em; font-weight: bold;">LIVE</span>
         </div>
         <div style="display: flex; align-items: center; gap: 20px; font-size: 0.9em;">
-            <span>🌍 Connecting Rwanda to the World</span>
+            <span>Manifest rwanda Live service</span>
             <span style="color: #ffd700;">●</span>
-            <span>Secure • Fast • Reliable</span>
+            <span>Blessed • Faith • Divine</span>
         </div>
     </div>
 </div>
