--- a/static/settingsToolbarAdditionalContent.html
+++ b/static/settingsToolbarAdditionalContent.html
@@ -1,5 +1,5 @@
 <template id="settings-toolbar-additional-content-template">
-    <div style="background: linear-gradient(135deg, #1a472a, #2d5a37); color: white; padding: 20px; border-radius: 10px; margin: 10px 0; border: 1px solid #ffd700;">
+    <!-- <div style="background: linear-gradient(135deg, #1a472a, #2d5a37); color: white; padding: 20px; border-radius: 10px; margin: 10px 0; border: 1px solid #ffd700;">
         <div style="text-align: center; margin-bottom: 15px;">
             <h4 style="color: #ffd700; margin: 0 0 10px 0; font-size: 1.2em;">🇷🇼 Manifest Rwanda Live</h4>
             <p style="margin: 0; font-size: 0.9em; opacity: 0.9;">Connecting Rwanda to the World</p>
@@ -22,5 +22,5 @@
                 <div>Innovation</div>
             </div>
         </div>
-    </div>
+    </div> -->
 </template>
