add watermac and favucon

--- a/title.html
+++ b/title.html
@@ -6,4 +6,4 @@
 <meta itemprop="name" content="Manifest Rwanda Live"/>
 <meta itemprop="description" content="Join a Manifest Rwanda video meeting platform for everyone."/>
 <meta itemprop="image" content="images/jitsilogo.png?v=1"/>
-<link rel="icon" href="images/favicon.svg?v=1">
+<link rel="icon" href="images/favicon.ico?v=1">
