--- a/index.html
+++ b/index.html
@@ -62,10 +62,13 @@
     <script>
         // IE11 and earlier can be identified via their user agent and be
         // redirected to a page that is known to have no newer js syntax.
-        if (window.navigator.userAgent.match(/(MSIE|Trident)/)) {
-            var roomName = encodeURIComponent(window.location.pathname);
-            window.location.pathname = 'static/recommendedBrowsers.html';
-        }
+
+        // THIS IS DISABLED BY ME
+
+        // if (window.navigator.userAgent.match(/(MSIE|Trident)/)) {
+        //     var roomName = encodeURIComponent(window.location.pathname);
+        //     window.location.pathname = 'static/recommendedBrowsers.html';
+        // }
 
         window.indexLoadedTime = window.performance.now();
         console.log("(TIME) index.html loaded:\t", indexLoadedTime);
